--- a/admin/main.html
+++ b/admin/main.html
@@ -7,5 +7,43 @@
 </head>
 <body>
     <h1>メインページ</h1>
+    <div>
+        <p>ユーザ名</p>
+    </div>
+
+    <div>
+        <p>エリア情報</p>
+        <div>
+            <a href="map.html">
+                <div>
+                    <div><p>地図データ1</p></div>
+                    <div><img src="" alt=""></div>
+                </div>
+            </a>
+            <a href="map.html">
+                <div>
+                    <div><p>地図データ2</p></div>
+                    <div><img src="" alt=""></div>
+                </div>
+            </a>
+            <a href="map.html">
+                <div>
+                    <div><p>地図データ3</p></div>
+                    <div><img src="" alt=""></div>
+                </div>
+            </a>
+
+            <div>
+                <a href="add_new_area.html">
+                    <div><p>＋</p></div>
+                    <div><p>新しいエリア</p></div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <a href="setting.html"><p>設定</p></a>
+    </div>
 </body>
 </html>
