--- a/admin/map.html
+++ b/admin/map.html
@@ -7,5 +7,16 @@
 </head>
 <body>
     <h1>地図ページ</h1>
+    <input type="text">
+    <select name="" id="">
+        <option value="">全員を表示</option>
+        <option value="">女性を表示</option>
+        <option value="">男性を表示</option>
+    </select>
+
+    <!-- 下記座標によって出力する位置を変えるデータ -->
+    <div>自分の場所</div>
+    <div>member1の場所</div>
+    
 </body>
 </html>
