--- a/admin/login.html
+++ b/admin/login.html
@@ -7,5 +7,16 @@
 </head>
 <body>
     <h1>ログイン画面</h1>
+    <form action="main.html">
+        <p>メールアドレス</p>
+        <input type="email">
+
+        <p>パスワード</p>
+        <input type="password">
+        
+        <input type="submit">
+    </form>
+
+
 </body>
 </html>
