--- a/admin/add_new_area.html
+++ b/admin/add_new_area.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>エリア追加エリア</title>
+    <link rel="stylesheet" href="css/reset-min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <form action="">
