--- a/admin/map.html
+++ b/admin/map.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>地図ページ</title>
+    <link rel="stylesheet" href="css/reset-min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>地図ページ</h1>
