--- a/admin/success.html
+++ b/admin/success.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登録完了画面</title>
+    <link rel="stylesheet" href="css/reset-min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>登録完了画面</h1>
